--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 <body>
-     <div>
-        <img src="./src/images/fondoInicial.png" alt="">
-     </div>
-     <div>
-        <img src="./src/images/kario.svg" alt="Logo">
+     <div class="login">
+        <img class="logo" src="./src/images/kario.svg" alt="Logo">
         <h1>Bienvenido al panel digital de <br>KARIO Media</h1>
         <p>Por favor ingresa los siguientes datos para ingresar a la plataforma</p>
         <h3 class="User-Pass">Usuario</h3>
