feat :sparkles: adding responsive

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -9,10 +9,12 @@
 <body>
     <div class="Welcome">
         <img src="../src/images/kario.svg" alt="" class="kario">
-        <p class="WelcomeAgain">Bienvenido de nuevo</p>
-        <img src="../src/images/pedrox2.png" alt="" class="Pedrito">
-        <p class="Nombre">Pedro Felipe Gomez Bonilla</p>
+        <h1 class="WelcomeAgain">Bienvenido de nuevo</h1>
+        <img src="../src/images/pedrox2.png" alt="" class="Pedrito" width="100" height="100">
+        <h1 class="Nombre">Pedro Felipe Gomez Bonilla</h1>
         <p class="Usuario">Usuario Administrador.</p>
     </div>
+    <img src="../src/images/kario sin kairo.svg" alt="" class="kario_sin_kario">
+    <!-- <meta http-equiv="refresh" content="2;url=panel.html"> -->
 </body>
 </html>
