--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -15,6 +15,7 @@
         <p class="Usuario">Usuario Administrador.</p>
     </div>
     <img src="../src/images/kario sin kairo.svg" alt="" class="kario_sin_kario">
+    <!--Enlace a la siguiente pagina-->
     <meta http-equiv="refresh" content="2;url=panel.html">
 </body>
 </html>
