--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
             <label for="password">Contraseña</label>
             <input id="password" type="password">
         </form>
-
-        <!-- <h3 class="User-Pass">Usuario</h3>
-        <input type="text">
-        <h3 class="User-Pass">Contraseña</h3>
-        <input type="password"> -->
         <a href="./pages/welcome.html">Ingresar al panel</a>
-        <p>Tienes problemas para ingresar? Por favor contactarse con asistencia técnica lo más pronto posible</p>
+        <p class="problems">Tienes problemas para ingresar? Por favor contactarse con asistencia técnica lo más pronto posible</p>
      </div>
 </body>
 </html>
