feat: :rocket: First panel done

--- a/pages/panel.html
+++ b/pages/panel.html
@@ -27,7 +27,7 @@
             <img class="middle" src="/src/images/kario sin kairo.svg" alt="">
         </div>
 
-        <div class="top">
+        <div class="report">
             <img  class="icons" src="/src/images/bug.svg" alt="">
             <p class="text">Reportar</p>
         </div>
@@ -58,7 +58,7 @@
         <p class="header8">Cumplimiento</p>
         <p class="header9">Área</p>
     </div>
-
+<!--Primer indicador-->
     <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Modelado 3D</p>
@@ -75,5 +75,93 @@
             <img class="menu1" src="/src/images/menu.svg" alt="">
         </div>
     </div>
+<!--Segundo indicador-->
+        <div class="indicadoruno">
+        <div class="indica1">
+            <p class="indicador">Colegios Privados</p>
+            <p class="descripcion">Deseño de maque....</p>
+            <p class="categoria">Media</p>
+            <p class="fechaI">24/04/21</p>
+            <p class="fechaT">12/11/21</p>
+            <p class="formula">Met.Fibo</p>
+            <p class="frecuencia">1/4</p>
+            <p class="cumplimiento">80%</p>
+            <p class="area">Developers</p>
+        </div>
+        <div id="menu1">
+            <img class="menu1" src="/src/images/menu.svg" alt="">
+        </div>
+    </div>
+<!--Tercer indicador-->
+        <div class="indicadoruno">
+        <div class="indica1">
+            <p class="indicador">Colegios Privados</p>
+            <p class="descripcion">Se busca llegar a los....</p>
+            <p class="categoria">Media</p>
+            <p class="fechaI">24/04/21</p>
+            <p class="fechaT">12/11/21</p>
+            <p class="formula">Met.Fibo</p>
+            <p class="frecuencia">1/4</p>
+            <p class="cumplimiento">80%</p>
+            <p class="area">Developers</p>
+        </div>
+        <div id="menu1">
+            <img class="menu1" src="/src/images/menu.svg" alt="">
+        </div>
+    </div>
+<!--Cuarto indicador-->
+    <div class="indicadoruno">
+        <div class="indica1">
+            <p class="indicador">Modelado 3D</p>
+            <p class="descripcion">Interés por dise.........</p>
+            <p class="categoria">Baja</p>
+            <p class="fechaI">12/05/21</p>
+            <p class="fechaT">12/12/21</p>
+            <p class="formula">Met.Ágil</p>
+            <p class="frecuencia">1/4</p>
+            <p class="cumplimiento">31%</p>
+            <p class="area">Marketing</p>
+        </div>
+        <div id="menu1">
+            <img class="menu1" src="/src/images/menu.svg" alt="">
+        </div>
+    </div>
+<!--Quinto indicador-->
+    <div class="indicadoruno">
+        <div class="indica1">
+            <p class="indicador">Estrato 2 - Floridablanca</p>
+            <p class="descripcion">Impacto en los sec.....</p>
+            <p class="categoria">Alta</p>
+            <p class="fechaI">12/04/21</p>
+            <p class="fechaT">12/09/21</p>
+            <p class="formula">Met.Expo</p>
+            <p class="frecuencia">1/4</p>
+            <p class="cumplimiento">95%</p>
+            <p class="area">Marketing</p>
+        </div>
+        <div id="menu1">
+            <img class="menu1" src="/src/images/menu.svg" alt="">
+        </div>
+    </div>
+<!--Sexto indicador-->
+        <div class="indicadoruno">
+        <div class="indica1">
+            <p class="indicador">Jóvenes en Acción</p>
+            <p class="descripcion">Impacto en los sec.....</p>
+            <p class="categoria">Alta</p>
+            <p class="fechaI">15/02/21</p>
+            <p class="fechaT">09/11/21</p>
+            <p class="formula">Met.Expo</p>
+            <p class="frecuencia">1/2</p>
+            <p class="cumplimiento">75%</p>
+            <p class="area">Producción</p>
+        </div>
+        <div id="menu1">
+            <img class="menu1" src="/src/images/menu.svg" alt="">
+        </div>
+    </div>
+
+    <button class="add_elements" >Añadir Elementos</button>
+
 </body>
 </html>
