feat: :test_tube: Adding media query

--- a/pages/panel.html
+++ b/pages/panel.html
@@ -6,8 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="/src/styles/panel.css">
 </head>
+
+<!--Para Desktop (1920x1080 width)-->
 <body>
     <header>
+        <div id="menutop">
+            <img class="menutop" src="/src/images/menu.svg" alt="">
+        </div>
+
         <div class="add">
             <img class="icons" src="/src/images/plus.svg" alt="">
             <p class="text">Añadir</p>
@@ -162,6 +168,9 @@
     </div>
 
     <button class="add_elements" >Añadir Elementos</button>
+
+
+<!--Para iPhone 14 Pro Max (428px width) --> 
 
 </body>
 </html>
