--- a/pages/panel.html
+++ b/pages/panel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,22 @@
 </head>
 
 <!--Para Desktop (1920x1080 width)-->
+
 <body>
     <header>
-        <div id="menutop">
-            <img class="menutop" src="/src/images/menu.svg" alt="">
+        <div class="menutop">
+            <input type="checkbox" id="click" class="click">
+            <label for="click" class="menu_btn">
+                <img class="menutop1" src="/src/images/menu.svg" alt="">
+            </label>
+            <div class="menu_desplega">
+                <a href="#"><img class="iconsTopD" src="/src/images/plus.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD"  src="/src/images/reload.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD"  src="/src/images/delete.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD"  src="/src/images/bug.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD"  src="/src/images/help.svg" alt=""></a>
+            </div>
+
         </div>
 
         <div class="add">
@@ -25,7 +38,7 @@
         </div>
 
         <div class="top">
-            <img  class="icons" src="/src/images/delete.svg" alt="">
+            <img class="icons" src="/src/images/delete.svg" alt="">
             <p class="text">Eliminar</p>
         </div>
 
@@ -34,12 +47,12 @@
         </div>
 
         <div class="report">
-            <img  class="icons" src="/src/images/bug.svg" alt="">
+            <img class="icons" src="/src/images/bug.svg" alt="">
             <p class="text">Reportar</p>
         </div>
 
         <div class="top">
-            <img  class="icons" src="/src/images/help.svg" alt="">
+            <img class="icons" src="/src/images/help.svg" alt="">
             <p class="text">Ayuda</p>
         </div>
 
@@ -64,7 +77,7 @@
         <p class="header8">Cumplimiento</p>
         <p class="header9">Área</p>
     </div>
-<!--Primer indicador-->
+    <!--Primer indicador-->
     <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Modelado 3D</p>
@@ -81,8 +94,8 @@
             <img class="menu1" src="/src/images/menu.svg" alt="">
         </div>
     </div>
-<!--Segundo indicador-->
-        <div class="indicadoruno">
+    <!--Segundo indicador-->
+    <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Colegios Privados</p>
             <p class="descripcion">Deseño de maque....</p>
@@ -98,8 +111,8 @@
             <img class="menu1" src="/src/images/menu.svg" alt="">
         </div>
     </div>
-<!--Tercer indicador-->
-        <div class="indicadoruno">
+    <!--Tercer indicador-->
+    <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Colegios Privados</p>
             <p class="descripcion">Se busca llegar a los....</p>
@@ -115,7 +128,7 @@
             <img class="menu1" src="/src/images/menu.svg" alt="">
         </div>
     </div>
-<!--Cuarto indicador-->
+    <!--Cuarto indicador-->
     <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Modelado 3D</p>
@@ -132,7 +145,7 @@
             <img class="menu1" src="/src/images/menu.svg" alt="">
         </div>
     </div>
-<!--Quinto indicador-->
+    <!--Quinto indicador-->
     <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Estrato 2 - Floridablanca</p>
@@ -149,8 +162,8 @@
             <img class="menu1" src="/src/images/menu.svg" alt="">
         </div>
     </div>
-<!--Sexto indicador-->
-        <div class="indicadoruno">
+    <!--Sexto indicador-->
+    <div class="indicadoruno">
         <div class="indica1">
             <p class="indicador">Jóvenes en Acción</p>
             <p class="descripcion">Impacto en los sec.....</p>
@@ -167,10 +180,11 @@
         </div>
     </div>
 
-    <button class="add_elements" >Añadir Elementos</button>
+    <button class="add_elements">Añadir Elementos</button>
 
 
-<!--Para iPhone 14 Pro Max (428px width) --> 
+    <!--Para iPhone 14 Pro Max (428px width) -->
 
 </body>
+
 </html>
