feat: :lipstick: Improving percentage circles in desktop and responsive version

--- a/pages/panel.html
+++ b/pages/panel.html
@@ -87,7 +87,12 @@
             <p class="fechaT">12/12/21</p>
             <p class="formula">Met.Ágil</p>
             <p class="frecuencia">1/4</p>
-            <p class="cumplimiento">31%</p>
+            <div class="cumplimiento">
+                <svg class="porcentaje">
+                        <circle class="circulo1" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                </svg>
+                <span class="cantidad" >31%</span>
+            </div>
             <p class="area">Marketing</p>
         </div>
         <div id="menu1">
@@ -104,7 +109,12 @@
             <p class="fechaT">12/11/21</p>
             <p class="formula">Met.Fibo</p>
             <p class="frecuencia">1/4</p>
-            <p class="cumplimiento">80%</p>
+            <div class="cumplimiento">
+                <svg class="porcentaje">
+                        <circle class="circulo2" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                </svg>
+                <span class="cantidad" >25%</span>
+            </div>
             <p class="area">Developers</p>
         </div>
         <div id="menu1">
@@ -121,7 +131,12 @@
             <p class="fechaT">12/11/21</p>
             <p class="formula">Met.Fibo</p>
             <p class="frecuencia">1/4</p>
-            <p class="cumplimiento">80%</p>
+            <div class="cumplimiento">
+                <svg class="porcentaje">
+                        <circle class="circulo3" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                </svg>
+                <span class="cantidad" >80%</span>
+            </div>
             <p class="area">Developers</p>
         </div>
         <div id="menu1">
@@ -138,7 +153,12 @@
             <p class="fechaT">12/12/21</p>
             <p class="formula">Met.Ágil</p>
             <p class="frecuencia">1/4</p>
-            <p class="cumplimiento">31%</p>
+            <div class="cumplimiento">
+                <svg class="porcentaje">
+                        <circle class="circulo4" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                </svg>
+                <span class="cantidad" >32%</span>
+            </div>
             <p class="area">Marketing</p>
         </div>
         <div id="menu1">
@@ -155,7 +175,12 @@
             <p class="fechaT">12/09/21</p>
             <p class="formula">Met.Expo</p>
             <p class="frecuencia">1/4</p>
-            <p class="cumplimiento">95%</p>
+            <div class="cumplimiento">
+                <svg class="porcentaje">
+                        <circle class="circulo5" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                </svg>
+                <span class="cantidad" >95%</span>
+            </div>
             <p class="area">Marketing</p>
         </div>
         <div id="menu1">
@@ -172,7 +197,12 @@
             <p class="fechaT">09/11/21</p>
             <p class="formula">Met.Expo</p>
             <p class="frecuencia">1/2</p>
-            <p class="cumplimiento">75%</p>
+            <div class="cumplimiento">
+                <svg class="porcentaje">
+                        <circle class="circulo6" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                </svg>
+                <span class="cantidad" >75%</span>
+            </div>
             <p class="area">Producción</p>
         </div>
         <div id="menu1">
