feat: :arrow_up: Adding links to all functions

--- a/pages/panel.html
+++ b/pages/panel.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>panel</title>
     <link rel="stylesheet" href="/src/styles/panel.css">
 </head>
 
 <!--Para Desktop (1920x1080 width)-->
+<!--Para iPhone 14 Pro Max (428px width) -->
 
 <body>
     <header>
+        <!--Para iPhone 14 Pro Max (428px width) -->
         <div class="menutop">
             <input type="checkbox" id="click" class="click">
             <label for="click" class="menu_btn">
@@ -19,47 +21,62 @@
             </label>
             <div class="menu_desplega">
                 <a href="#"><img class="iconsTopD" src="/src/images/plus.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD"  src="/src/images/reload.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD"  src="/src/images/delete.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD"  src="/src/images/bug.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD"  src="/src/images/help.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="/src/images/reload.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="/src/images/delete.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="/src/images/bug.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="/src/images/help.svg" alt=""></a>
             </div>
-
         </div>
+
+        <!--Para Desktop (1920x1080 width)-->
 
         <div class="add">
-            <img class="icons" src="/src/images/plus.svg" alt="">
-            <p class="text">Añadir</p>
+            <a href="">
+                <img class="icons" src="/src/images/plus.svg" alt="">
+                <p class="text">Añadir</p>
+            </a>
         </div>
 
         <div class="top">
-            <img class="icons" src="/src/images/reload.svg" alt="">
-            <p class="text">Refescar</p>
+            <a href="">
+                <img class="icons" src="/src/images/reload.svg" alt="">
+                <p class="text">Refescar</p>
+            </a>
         </div>
 
         <div class="top">
-            <img class="icons" src="/src/images/delete.svg" alt="">
-            <p class="text">Eliminar</p>
+            <a href="">
+                <img class="icons" src="/src/images/delete.svg" alt="">
+                <p class="text">Eliminar</p>
+            </a>
         </div>
 
         <div class="top">
-            <img class="middle" src="/src/images/kario sin kairo.svg" alt="">
+            <a href="">
+                <img class="middle" src="/src/images/kario sin kairo.svg" alt="">
+            </a>
         </div>
 
         <div class="report">
+            <a href="">
             <img class="icons" src="/src/images/bug.svg" alt="">
             <p class="text">Reportar</p>
+            </a>
         </div>
 
         <div class="top">
+            <a href="">
             <img class="icons" src="/src/images/help.svg" alt="">
             <p class="text">Ayuda</p>
+            </a>
         </div>
 
         <div class="account">
+            <a href="">
             <img class="blackicon" src="/src/images/settings.svg" alt="">
             <img class="blackicon" src="/src/images/bell.svg" alt="">
             <img class="pedro" src="/src/images/pedro.png" alt="">
+            </a>
         </div>
     </header>
 
@@ -89,9 +106,9 @@
             <p class="frecuencia">1/4</p>
             <div class="cumplimiento">
                 <svg class="porcentaje">
-                        <circle class="circulo1" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                    <circle class="circulo1" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
                 </svg>
-                <span class="cantidad" >31%</span>
+                <span class="cantidad">31%</span>
             </div>
             <p class="area">Marketing</p>
         </div>
@@ -111,9 +128,9 @@
             <p class="frecuencia">1/4</p>
             <div class="cumplimiento">
                 <svg class="porcentaje">
-                        <circle class="circulo2" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                    <circle class="circulo2" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
                 </svg>
-                <span class="cantidad" >25%</span>
+                <span class="cantidad">25%</span>
             </div>
             <p class="area">Developers</p>
         </div>
@@ -133,9 +150,9 @@
             <p class="frecuencia">1/4</p>
             <div class="cumplimiento">
                 <svg class="porcentaje">
-                        <circle class="circulo3" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                    <circle class="circulo3" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
                 </svg>
-                <span class="cantidad" >80%</span>
+                <span class="cantidad">80%</span>
             </div>
             <p class="area">Developers</p>
         </div>
@@ -155,9 +172,9 @@
             <p class="frecuencia">1/4</p>
             <div class="cumplimiento">
                 <svg class="porcentaje">
-                        <circle class="circulo4" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                    <circle class="circulo4" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
                 </svg>
-                <span class="cantidad" >32%</span>
+                <span class="cantidad">32%</span>
             </div>
             <p class="area">Marketing</p>
         </div>
@@ -177,9 +194,9 @@
             <p class="frecuencia">1/4</p>
             <div class="cumplimiento">
                 <svg class="porcentaje">
-                        <circle class="circulo5" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                    <circle class="circulo5" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
                 </svg>
-                <span class="cantidad" >95%</span>
+                <span class="cantidad">95%</span>
             </div>
             <p class="area">Marketing</p>
         </div>
@@ -199,9 +216,9 @@
             <p class="frecuencia">1/2</p>
             <div class="cumplimiento">
                 <svg class="porcentaje">
-                        <circle class="circulo6" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
+                    <circle class="circulo6" r="1.5vw" cx="2vw" cy="2vw" pathlength="100" />
                 </svg>
-                <span class="cantidad" >75%</span>
+                <span class="cantidad">75%</span>
             </div>
             <p class="area">Producción</p>
         </div>
@@ -210,10 +227,9 @@
         </div>
     </div>
 
-    <button class="add_elements">Añadir Elementos</button>
-
-
-    <!--Para iPhone 14 Pro Max (428px width) -->
+    <a href="">
+        <button class="add_elements">Añadir Elementos</button>
+    </a>
 
 </body>
 
