feat: :hammer: Adding new blocks

--- a/pages/help.html
+++ b/pages/help.html
@@ -59,23 +59,23 @@
 
         <div class="report">
             <a href="">
-            <img class="icons" src="/src/images/bug.svg" alt="">
-            <p class="text">Reportar</p>
+                <img class="icons" src="/src/images/bug.svg" alt="">
+                <p class="text">Reportar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-            <img class="icons" src="/src/images/help.svg" alt="">
-            <p class="text">Ayuda</p>
+                <img class="icons" src="/src/images/help.svg" alt="">
+                <p class="text">Ayuda</p>
             </a>
         </div>
 
         <div class="account">
             <a href="">
-            <img class="blackicon" src="/src/images/settings.svg" alt="">
-            <img class="blackicon" src="/src/images/bell.svg" alt="">
-            <img class="pedro" src="/src/images/pedro.png" alt="">
+                <img class="blackicon" src="/src/images/settings.svg" alt="">
+                <img class="blackicon" src="/src/images/bell.svg" alt="">
+                <img class="pedro" src="/src/images/pedro.png" alt="">
             </a>
         </div>
     </header>
@@ -85,15 +85,36 @@
     <div class="firstblock">
         <h1 class="panel">Preguntas Frecuentes</h1>
         <div class="preguntas">
-            <p>¿Cómo puedo contactar soporte?</p>
+            <p class="questions">¿Cómo puedo contactar soporte?</p>
             <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
         </div>
-                <div class="preguntas">
-            <p>¿Cómo puedo contactar soporte?</p>
+        <div class="preguntas">
+            <p class="questions">¿Cómo reseteo mi contraseña?</p>
             <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
         </div>
-                <div class="preguntas">
-            <p>¿Cómo puedo contactar soporte?</p>
+        <div class="preguntas">
+            <p class="questions">¿Dónde encuentro la documentación?</p>
             <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
         </div>
     </div>
+
+
+    <div class="secondblock">
+        <div class="uno">
+            <img class="ajuste" src="/src/images/settings.svg" alt="">
+            <p class="baseTexts">Ajustes</p>
+        </div>
+        <div class="dos">
+            <img class="ajuste" src="/src/images/soporte.png" alt="">
+            <p class="baseTexts">Contactenos</p>
+        </div>
+        <div class="tres">
+            <img class="ajuste" src="/src/images/chat.png" alt="">
+            <p class="baseTexts">Chat en Línea</p>
+        </div>
+
+    </div>
+
+</body>
+
+</html>
