feat: :white_check_mark: Finishing help page

--- a/pages/help.html
+++ b/pages/help.html
@@ -83,7 +83,7 @@
     <h1 class="panel">Ayuda</h1>
 
     <div class="firstblock">
-        <h1 class="panel">Preguntas Frecuentes</h1>
+        <h1 class="panel2">Preguntas Frecuentes</h1>
         <div class="preguntas">
             <p class="questions">¿Cómo puedo contactar soporte?</p>
             <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
@@ -101,19 +101,23 @@
 
     <div class="secondblock">
         <div class="uno">
-            <img class="ajuste" src="/src/images/settings.svg" alt="">
-            <p class="baseTexts">Ajustes</p>
+            <img class="ajustes" src="/src/images/settings.svg" alt="">
+            <p class="ajusteTexts">Ajustes</p>
         </div>
         <div class="dos">
-            <img class="ajuste" src="/src/images/soporte.png" alt="">
+            <img class="contactenos" src="/src/images/soporte.png" alt="">
             <p class="baseTexts">Contactenos</p>
         </div>
         <div class="tres">
-            <img class="ajuste" src="/src/images/chat.png" alt="">
+            <img class="chat" src="/src/images/chat.png" alt="">
             <p class="baseTexts">Chat en Línea</p>
         </div>
 
     </div>
+
+    <a href="">
+        <button class="add_elements">Eliminar Elementos</button>
+    </a>
 
 </body>
 
