feat: :white_check_mark: Report desktop version done

--- a/pages/report.html
+++ b/pages/report.html
@@ -80,38 +80,38 @@
         </div>
     </header>
 
-    <h1 class="panel">Ayuda</h1>
+    <h1 class="panel">Reporte</h1>
 
     <div class="block">
         <div class="item1">
-            <p class="titles">Título Reporte</p>
-            <input type="text">
+            <p class="titlesR">Título Reporte</p>
+            <h2 class="titulo">Titulo</h2>
         </div>
         <div class="item2">
-            <p class="titles">Fecha Reporte</p>
-            <input type="text">
+            <p class="titlesF">Fecha Reporte</p>
+            <h2 class="fecha">Fecha</h2>
         </div>
         <div class="item3">
-            <p class="titles">Descripción</p>
-            <input type="text">
+            <p class="titlesD">Descripción</p>
+            <h2 class="descri">Detalles del reporte</h2>
         </div>
         <div class="item4">
-            <p class="titles">Prioridad</p>
-            <img src="flecha" alt="">
+            <p class="titlesP">Prioridad</p>
+            <img class="flechaP" src="/src/images/arrowDown.png" alt="">
         </div>
         <div class="item5">
-            <p class="titles">Área</p>
-            <img src="flecha" alt="">
+            <p class="titlesA">Área</p>
+            <img class="arrowLeft" src="/src/images/arrowDown.png" alt="">
         </div>
         <div class="item6">
-            <p class="titles">Evidencia Reporte</p>
-            <img src="imagen" alt="">
+            <p class="titlesE">Evidencia Reporte</p>
+            <img class="media" src="/src/images/media.png" alt="">
         </div>
     </div>
 
 
     <a href="">
-        <button class="add_elements">Eliminar Elementos</button>
+        <button class="add_elements">Enviar Reporte</button>
     </a>
 
 </body>
