feat: :white_check_mark: Report responsive page done

--- a/pages/report.html
+++ b/pages/report.html
@@ -88,7 +88,7 @@
             <h2 class="titulo">Titulo</h2>
         </div>
         <div class="item2">
-            <p class="titlesF">Fecha Reporte</p>
+            <p class="titlesF">Fecha</p>
             <h2 class="fecha">Fecha</h2>
         </div>
         <div class="item3">
@@ -104,7 +104,7 @@
             <img class="arrowLeft" src="/src/images/arrowDown.png" alt="">
         </div>
         <div class="item6">
-            <p class="titlesE">Evidencia Reporte</p>
+            <p class="titlesE">Evidencia </p>
             <img class="media" src="/src/images/media.png" alt="">
         </div>
     </div>
