--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         <img class="logo" src="./src/images/kario.svg" alt="Logo">
         <h1>Bienvenido al panel digital de <br>KARIO Media</h1>
         <p>Por favor ingresa los siguientes datos para ingresar a la plataforma</p>
-        <h3 class="User-Pass">Usuario</h3>
-        <input type="text">
-        <h3 class="User-Pass">Contraseña</h3>
-        <input type="password">
-        <a href="">Ingresar al panel</a>
-        <p>Tienes problemas para ingresar? Por favor contactarse con asistencia técnica lo más pronto posible</p>
+        <form class="formulario" action="">
+            <label for="user">Usuario</label>
+            <input id="user" type="text">
+            <label for="password">Contraseña</label>
+            <input id="password" type="password">
+        </form>
+        <a href="./pages/welcome.html">Ingresar al panel</a>
+        <p class="problems">Tienes problemas para ingresar? Por favor contactarse con asistencia técnica lo más pronto posible</p>
      </div>
 </body>
 </html>
