feat: :sparkles: solving bugs

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -14,5 +14,6 @@
         <p class="Nombre">Pedro Felipe Gomez Bonilla</p>
         <p class="Usuario">Usuario Administrador.</p>
     </div>
+    <meta http-equiv="refresh" content="2;url=panel.html">
 </body>
 </html>
