--- a/pages/panel.html
+++ b/pages/panel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>panel</title>
-    <link rel="stylesheet" href="/src/styles/panel.css">
+    <link rel="stylesheet" href="../src/styles/panel.css">
 </head>
 
 <!--Para Desktop (1920x1080 width)-->
