--- a/pages/panel.html
+++ b/pages/panel.html
@@ -32,7 +32,7 @@
 
         <div class="add">
             <a href="">
-                <img class="icons" src="/src/images/plus.svg" alt="">
+                <img class="icons" src="../src/images/plus.svg" alt="">
                 <p class="text">Añadir</p>
             </a>
         </div>
