feat: :adhesive_bandage: Fixing styles links

--- a/pages/añadir.html
+++ b/pages/añadir.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="Añadir_elementos">
-        <a class="botom" href="http://">Añadir Elementos</a>
+        <a class="botom" href="../pages/añadir.html">Añadir Elementos</a>
     </div>
 
 </html>
