--- a/pages/help.html
+++ b/pages/help.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>help</title>
-    <link rel="stylesheet" href="/src/styles/help.css">
+    <link rel="stylesheet" href="../src/styles/help.css">
 </head>
 
 <!--Para Desktop (1920x1080 width)-->
@@ -17,14 +17,14 @@
         <div class="menutop">
             <input type="checkbox" id="click" class="click">
             <label for="click" class="menu_btn">
-                <img class="menutop1" src="/src/images/menu.svg" alt="">
+                <img class="menutop1" src="../src/images/menu.svg" alt="">
             </label>
             <div class="menu_desplega">
-                <a href="#"><img class="iconsTopD" src="/src/images/plus.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/reload.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/delete.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/bug.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/help.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/reload.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
             </div>
         </div>
 
@@ -32,50 +32,50 @@
 
         <div class="add">
             <a href="">
-                <img class="icons" src="/src/images/plus.svg" alt="">
+                <img class="icons" src="../src/images/plus.svg" alt="">
                 <p class="text">Añadir</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/reload.svg" alt="">
+                <img class="icons" src="../src/images/reload.svg" alt="">
                 <p class="text">Refescar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/delete.svg" alt="">
+                <img class="icons" src="../src/images/delete.svg" alt="">
                 <p class="text">Eliminar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="middle" src="/src/images/kario sin kairo.svg" alt="">
+                <img class="middle" src="../src/images/kario sin kairo.svg" alt="">
             </a>
         </div>
 
         <div class="report">
             <a href="">
-                <img class="icons" src="/src/images/bug.svg" alt="">
+                <img class="icons" src="../src/images/bug.svg" alt="">
                 <p class="text">Reportar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/help.svg" alt="">
+                <img class="icons" src="../src/images/help.svg" alt="">
                 <p class="text">Ayuda</p>
             </a>
         </div>
 
         <div class="account">
             <a href="">
-                <img class="blackicon" src="/src/images/settings.svg" alt="">
-                <img class="blackicon" src="/src/images/bell.svg" alt="">
-                <img class="pedro" src="/src/images/pedro.png" alt="">
+                <img class="blackicon" src="../src/images/settings.svg" alt="">
+                <img class="blackicon" src="../src/images/bell.svg" alt="">
+                <img class="pedro" src="../src/images/pedro.png" alt="">
             </a>
         </div>
     </header>
@@ -86,30 +86,30 @@
         <h1 class="panel2">Preguntas Frecuentes</h1>
         <div class="preguntas">
             <p class="questions">¿Cómo puedo contactar soporte?</p>
-            <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
+            <img class="arrowDown" src="../src/images/arrowDown.png" alt="">
         </div>
         <div class="preguntas">
             <p class="questions">¿Cómo reseteo mi contraseña?</p>
-            <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
+            <img class="arrowDown" src="../src/images/arrowDown.png" alt="">
         </div>
         <div class="preguntas">
             <p class="questions">¿Dónde encuentro la documentación?</p>
-            <img class="arrowDown" src="/src/images/arrowDown.png" alt="">
+            <img class="arrowDown" src="../src/images/arrowDown.png" alt="">
         </div>
     </div>
 
 
     <div class="secondblock">
         <div class="uno">
-            <img class="ajustes" src="/src/images/settings.svg" alt="">
+            <img class="ajustes" src="../src/images/settings.svg" alt="">
             <p class="ajusteTexts">Ajustes</p>
         </div>
         <div class="dos">
-            <img class="contactenos" src="/src/images/soporte.png" alt="">
+            <img class="contactenos" src="../src/images/soporte.png" alt="">
             <p class="baseTexts">Contactenos</p>
         </div>
         <div class="tres">
-            <img class="chat" src="/src/images/chat.png" alt="">
+            <img class="chat" src="../src/images/chat.png" alt="">
             <p class="baseTexts">Chat en Línea</p>
         </div>
 
