--- a/pages/panel.html
+++ b/pages/panel.html
@@ -17,14 +17,14 @@
         <div class="menutop">
             <input type="checkbox" id="click" class="click">
             <label for="click" class="menu_btn">
-                <img class="menutop1" src="/src/images/menu.svg" alt="">
+                <img class="menutop1" src="../src/images/menu.svg" alt="">
             </label>
             <div class="menu_desplega">
-                <a href="#"><img class="iconsTopD" src="/src/images/plus.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/reload.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/delete.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/bug.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/help.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/reload.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
             </div>
         </div>
 
@@ -39,43 +39,43 @@
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/reload.svg" alt="">
+                <img class="icons" src="../src/images/reload.svg" alt="">
                 <p class="text">Refescar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/delete.svg" alt="">
+                <img class="icons" src="../src/images/delete.svg" alt="">
                 <p class="text">Eliminar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="middle" src="/src/images/kario sin kairo.svg" alt="">
+                <img class="middle" src="../src/images/kario sin kairo.svg" alt="">
             </a>
         </div>
 
         <div class="report">
             <a href="">
-            <img class="icons" src="/src/images/bug.svg" alt="">
+            <img class="icons" src="../src/images/bug.svg" alt="">
             <p class="text">Reportar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-            <img class="icons" src="/src/images/help.svg" alt="">
+            <img class="icons" src="../src/images/help.svg" alt="">
             <p class="text">Ayuda</p>
             </a>
         </div>
 
         <div class="account">
             <a href="">
-            <img class="blackicon" src="/src/images/settings.svg" alt="">
-            <img class="blackicon" src="/src/images/bell.svg" alt="">
-            <img class="pedro" src="/src/images/pedro.png" alt="">
+            <img class="blackicon" src="../src/images/settings.svg" alt="">
+            <img class="blackicon" src="../src/images/bell.svg" alt="">
+            <img class="pedro" src="../src/images/pedro.png" alt="">
             </a>
         </div>
     </header>
@@ -113,7 +113,7 @@
             <p class="area">Marketing</p>
         </div>
         <div id="menu1">
-            <img class="menu1" src="/src/images/menu.svg" alt="">
+            <img class="menu1" src="../src/images/menu.svg" alt="">
         </div>
     </div>
     <!--Segundo indicador-->
@@ -135,7 +135,7 @@
             <p class="area">Developers</p>
         </div>
         <div id="menu1">
-            <img class="menu1" src="/src/images/menu.svg" alt="">
+            <img class="menu1" src="../src/images/menu.svg" alt="">
         </div>
     </div>
     <!--Tercer indicador-->
@@ -157,7 +157,7 @@
             <p class="area">Developers</p>
         </div>
         <div id="menu1">
-            <img class="menu1" src="/src/images/menu.svg" alt="">
+            <img class="menu1" src="../src/images/menu.svg" alt="">
         </div>
     </div>
     <!--Cuarto indicador-->
@@ -179,7 +179,7 @@
             <p class="area">Marketing</p>
         </div>
         <div id="menu1">
-            <img class="menu1" src="/src/images/menu.svg" alt="">
+            <img class="menu1" src="../src/images/menu.svg" alt="">
         </div>
     </div>
     <!--Quinto indicador-->
@@ -201,7 +201,7 @@
             <p class="area">Marketing</p>
         </div>
         <div id="menu1">
-            <img class="menu1" src="/src/images/menu.svg" alt="">
+            <img class="menu1" src="../src/images/menu.svg" alt="">
         </div>
     </div>
     <!--Sexto indicador-->
@@ -223,7 +223,7 @@
             <p class="area">Producción</p>
         </div>
         <div id="menu1">
-            <img class="menu1" src="/src/images/menu.svg" alt="">
+            <img class="menu1" src="../src/images/menu.svg" alt="">
         </div>
     </div>
 
