--- a/pages/report.html
+++ b/pages/report.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>help</title>
-    <link rel="stylesheet" href="/src/styles/report.css">
+    <link rel="stylesheet" href="../src/styles/report.css">
 </head>
 
 <!--Para Desktop (1920x1080 width)-->
@@ -17,14 +17,14 @@
         <div class="menutop">
             <input type="checkbox" id="click" class="click">
             <label for="click" class="menu_btn">
-                <img class="menutop1" src="/src/images/menu.svg" alt="">
+                <img class="menutop1" src="../src/images/menu.svg" alt="">
             </label>
             <div class="menu_desplega">
-                <a href="#"><img class="iconsTopD" src="/src/images/plus.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/reload.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/delete.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/bug.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="/src/images/help.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/reload.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
+                <a href="#"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
             </div>
         </div>
 
@@ -32,50 +32,50 @@
 
         <div class="add">
             <a href="">
-                <img class="icons" src="/src/images/plus.svg" alt="">
+                <img class="icons" src="../src/images/plus.svg" alt="">
                 <p class="text">Añadir</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/reload.svg" alt="">
+                <img class="icons" src="../src/images/reload.svg" alt="">
                 <p class="text">Refescar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/delete.svg" alt="">
+                <img class="icons" src="../src/images/delete.svg" alt="">
                 <p class="text">Eliminar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="middle" src="/src/images/kario sin kairo.svg" alt="">
+                <img class="middle" src="../src/images/kario sin kairo.svg" alt="">
             </a>
         </div>
 
         <div class="report">
             <a href="">
-                <img class="icons" src="/src/images/bug.svg" alt="">
+                <img class="icons" src="../src/images/bug.svg" alt="">
                 <p class="text">Reportar</p>
             </a>
         </div>
 
         <div class="top">
             <a href="">
-                <img class="icons" src="/src/images/help.svg" alt="">
+                <img class="icons" src="../src/images/help.svg" alt="">
                 <p class="text">Ayuda</p>
             </a>
         </div>
 
         <div class="account">
             <a href="">
-                <img class="blackicon" src="/src/images/settings.svg" alt="">
-                <img class="blackicon" src="/src/images/bell.svg" alt="">
-                <img class="pedro" src="/src/images/pedro.png" alt="">
+                <img class="blackicon" src="../src/images/settings.svg" alt="">
+                <img class="blackicon" src="../src/images/bell.svg" alt="">
+                <img class="pedro" src="../src/images/pedro.png" alt="">
             </a>
         </div>
     </header>
@@ -97,15 +97,15 @@
         </div>
         <div class="item4">
             <p class="titlesP">Prioridad</p>
-            <img class="flechaP" src="/src/images/arrowDown.png" alt="">
+            <img class="flechaP" src="../src/images/arrowDown.png" alt="">
         </div>
         <div class="item5">
             <p class="titlesA">Área</p>
-            <img class="arrowLeft" src="/src/images/arrowDown.png" alt="">
+            <img class="arrowLeft" src="../src/images/arrowDown.png" alt="">
         </div>
         <div class="item6">
             <p class="titlesE">Evidencia </p>
-            <img class="media" src="/src/images/media.png" alt="">
+            <img class="media" src="../src/images/media.png" alt="">
         </div>
     </div>
 
