--- a/pages/panel.html
+++ b/pages/panel.html
@@ -20,18 +20,18 @@
                 <img class="menutop1" src="../src/images/menu.svg" alt="">
             </label>
             <div class="menu_desplega">
-                <a href="#"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
+                <a href="../pages/añadir.html"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
                 <a href="#"><img class="iconsTopD" src="../src/images/reload.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
+                <a href="../pages/delete.html"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
+                <a href="../pages/report.html"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
+                <a href="../pages/help.html"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
             </div>
         </div>
 
         <!--Para Desktop (1920x1080 width)-->
 
         <div class="add">
-            <a href="">
+            <a href="../pages/añadir.html">
                 <img class="icons" src="../src/images/plus.svg" alt="">
                 <p class="text">Añadir</p>
             </a>
@@ -45,27 +45,27 @@
         </div>
 
         <div class="top">
-            <a href="">
+            <a href="../pages/delete.html">
                 <img class="icons" src="../src/images/delete.svg" alt="">
                 <p class="text">Eliminar</p>
             </a>
         </div>
 
         <div class="top">
-            <a href="">
+            <a href="../index.html">
                 <img class="middle" src="../src/images/kario sin kairo.svg" alt="">
             </a>
         </div>
 
         <div class="report">
-            <a href="">
+            <a href="../pages/report.html">
             <img class="icons" src="../src/images/bug.svg" alt="">
             <p class="text">Reportar</p>
             </a>
         </div>
 
         <div class="top">
-            <a href="">
+            <a href="../pages/help.html">
             <img class="icons" src="../src/images/help.svg" alt="">
             <p class="text">Ayuda</p>
             </a>
