feat: :art: Fixing report links

--- a/pages/report.html
+++ b/pages/report.html
@@ -31,7 +31,7 @@
         <!--Para Desktop (1920x1080 width)-->
 
         <div class="add">
-            <a href="">
+            <a href="../pages/añadir.html">
                 <img class="icons" src="../src/images/plus.svg" alt="">
                 <p class="text">Añadir</p>
             </a>
@@ -45,27 +45,27 @@
         </div>
 
         <div class="top">
-            <a href="">
+            <a href="../pages/delete.html">
                 <img class="icons" src="../src/images/delete.svg" alt="">
                 <p class="text">Eliminar</p>
             </a>
         </div>
 
         <div class="top">
-            <a href="">
+            <a href="../pages/welcome.html">
                 <img class="middle" src="../src/images/kario sin kairo.svg" alt="">
             </a>
         </div>
 
         <div class="report">
-            <a href="">
+            <a href="../pages/report.html">
                 <img class="icons" src="../src/images/bug.svg" alt="">
                 <p class="text">Reportar</p>
             </a>
         </div>
 
         <div class="top">
-            <a href="">
+            <a href="../pages/help.html">
                 <img class="icons" src="../src/images/help.svg" alt="">
                 <p class="text">Ayuda</p>
             </a>
