--- a/pages/delete.html
+++ b/pages/delete.html
@@ -31,7 +31,7 @@
         <!--Para Desktop (1920x1080 width)-->
 
         <div class="add">
-            <a href="/..pages/añadir.html">
+            <a href="../pages/añadir.html">
                 <img class="icons" src="../src/images/plus.svg" alt="">
                 <p class="text">Añadir</p>
             </a>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="top">
-            <a href="..pages/welcome.html">
+            <a href="../pages/welcome.html">
                 <img class="middle" src="../src/images/kario sin kairo.svg" alt="">
             </a>
         </div>
