--- a/pages/help.html
+++ b/pages/help.html
@@ -20,11 +20,11 @@
                 <img class="menutop1" src="../src/images/menu.svg" alt="">
             </label>
             <div class="menu_desplega">
-                <a href="#"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
+                <a href="../pages/añadir.html"><img class="iconsTopD" src="../src/images/plus.svg" alt=""></a>
                 <a href="#"><img class="iconsTopD" src="../src/images/reload.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
-                <a href="#"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
+                <a href="../pages/delete.html"><img class="iconsTopD" src="../src/images/delete.svg" alt=""></a>
+                <a href="../pages/report.html"><img class="iconsTopD" src="../src/images/bug.svg" alt=""></a>
+                <a href="../pages/help.html"><img class="iconsTopD" src="../src/images/help.svg" alt=""></a>
             </div>
         </div>
 
