feat: :ambulance: Changing responsive max-width

--- a/pages/help.html
+++ b/pages/help.html
@@ -116,7 +116,7 @@
     </div>
 
     <a href="">
-        <button class="add_elements">Eliminar Elementos</button>
+        <button class="add_elements">Linea Directa</button>
     </a>
 
 </body>
